Updated dataset generation

--- a/music-gpt2.ipynb
+++ b/music-gpt2.ipynb
@@ -25,35 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-b6d798c7fb3cb5fa\n",
-      "Found cached dataset text (/Users/jonathan/.cache/huggingface/datasets/text/default-b6d798c7fb3cb5fa/0.0.0/cb1e9bd71a82ad27976be3b12b407850fe2837d80c22c5e03a28949843a8ace2)\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 114.68it/s]"
+      "/Users/jonathan/miniforge3/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DatasetDict({\n",
-      "    train: Dataset({\n",
-      "        features: ['text'],\n",
-      "        num_rows: 11060\n",
-      "    })\n",
-      "})\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'load_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtransformers\u001b[39;00m \u001b[39mimport\u001b[39;00m GPT2TokenizerFast\n\u001b[0;32m----> 3\u001b[0m full_train_dataset \u001b[39m=\u001b[39m load_dataset(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m, data_files\u001b[39m=\u001b[39msingle_dataset_file)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(full_train_dataset)\n\u001b[1;32m      6\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_training_corpus\u001b[39m(dataset\u001b[39m=\u001b[39mfull_train_dataset):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_dataset' is not defined"
      ]
     }
    ],
@@ -415,6 +406,37 @@
     "generator = pipeline('text-generation', model='./music-gpt2-2.0')\n",
     "generator(\"4/4 F4 1.0 0.0 56 G4 1.0 1.0 60\", max_length=256)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'CausalLMOutputWithCrossAttentions' object has no attribute 'last_hidden_state'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39minput\u001b[39m \u001b[39m=\u001b[39m tokenizer(\u001b[39m\"\u001b[39m\u001b[39m4/4\u001b[39m\u001b[39m\"\u001b[39m, return_tensors\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpt\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m output \u001b[39m=\u001b[39m model(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[39mprint\u001b[39m(output\u001b[39m.\u001b[39;49mlast_hidden_state\u001b[39m.\u001b[39mshape)\n\u001b[1;32m     10\u001b[0m predictions \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmax(output\u001b[39m.\u001b[39mlogits\u001b[39m.\u001b[39mdetach()\u001b[39m.\u001b[39mnumpy(), axis\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     11\u001b[0m tokenizer\u001b[39m.\u001b[39mdecode(predictions[\u001b[39m0\u001b[39m])\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'CausalLMOutputWithCrossAttentions' object has no attribute 'last_hidden_state'"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import GPT2LMHeadModel, GPT2TokenizerFast\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "tokenizer = GPT2TokenizerFast.from_pretrained(\"./music-gpt2-tokenizer\")\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"./music-gpt2-2.0/\")\n",
+    "input = tokenizer(\"4/4\", return_tensors=\"pt\")\n",
+    "output = model(**input)\n",
+    "print(output.last_hidden_state.shape)\n",
+    "predictions = np.argmax(output.logits.detach().numpy(), axis=-1)\n",
+    "tokenizer.decode(predictions[0])"
+   ]
   }
  ],
  "metadata": {
@@ -433,12 +455,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "af542d1d59d124dfafc1024f9697abce927caa79140f7587b6782b20c838b866"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
