--- a/music-gpt2.ipynb
+++ b/music-gpt2.ipynb
@@ -25,26 +25,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jonathan/miniforge3/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "Using custom data configuration default-884e21f88136b3d0\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'load_dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtransformers\u001b[39;00m \u001b[39mimport\u001b[39;00m GPT2TokenizerFast\n\u001b[0;32m----> 3\u001b[0m full_train_dataset \u001b[39m=\u001b[39m load_dataset(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m, data_files\u001b[39m=\u001b[39msingle_dataset_file)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(full_train_dataset)\n\u001b[1;32m      6\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_training_corpus\u001b[39m(dataset\u001b[39m=\u001b[39mfull_train_dataset):\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'load_dataset' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset text/default to /Users/jonathan/.cache/huggingface/datasets/text/default-884e21f88136b3d0/0.0.0/cb1e9bd71a82ad27976be3b12b407850fe2837d80c22c5e03a28949843a8ace2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading data files: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 6626.07it/s]\n",
+      "Extracting data files: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 462.34it/s]\n",
+      "                                                                  \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset text downloaded and prepared to /Users/jonathan/.cache/huggingface/datasets/text/default-884e21f88136b3d0/0.0.0/cb1e9bd71a82ad27976be3b12b407850fe2837d80c22c5e03a28949843a8ace2. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 179.84it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['text'],\n",
+      "        num_rows: 33290\n",
+      "    })\n",
+      "})\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -78,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at /Users/jonathan/.cache/huggingface/datasets/text/default-b6d798c7fb3cb5fa/0.0.0/cb1e9bd71a82ad27976be3b12b407850fe2837d80c22c5e03a28949843a8ace2/cache-fc26a941827db6cc.arrow\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 34/34 [00:14<00:00,  2.40ba/s]"
      ]
     },
     {
@@ -88,13 +125,20 @@
       "DatasetDict({\n",
       "    train: Dataset({\n",
       "        features: ['input_ids', 'attention_mask'],\n",
-      "        num_rows: 11048\n",
+      "        num_rows: 33256\n",
       "    })\n",
       "    test: Dataset({\n",
       "        features: ['input_ids', 'attention_mask'],\n",
-      "        num_rows: 12\n",
+      "        num_rows: 34\n",
       "    })\n",
       "})\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -123,26 +167,18 @@
     "metric = evaluate.load(\"accuracy\")\n",
     "\n",
     "def compute_metrics(eval_pred):\n",
-    "    logits, labels = eval_pred\n",
-    "    predictions = np.argmax(logits, axis=-1)\n",
-    "    acc = 0\n",
-    "    i = 0\n",
-    "    while i < len(predictions):\n",
-    "      acc += metric.compute(predictions=predictions[i], references=labels[0][i])[\"accuracy\"]\n",
-    "      i += 1\n",
-    "    return {\"accuracy\": acc / i}\n",
+    "    return {\"accuracy\": 0}\n",
     "\n",
-    "config = GPT2Config(vocab_size=1000, n_positions=1024)\n",
-    "model = GPT2LMHeadModel(config)\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"music-gpt2-2_2\")\n",
     "training_args = TrainingArguments(\"trainer\", \n",
     "    label_names=[\"input_ids\", \"attention_mask\"],\n",
     "    evaluation_strategy=\"steps\", \n",
-    "    eval_steps=1000,\n",
-    "    save_steps=1000,\n",
+    "    eval_steps=10000,\n",
+    "    save_steps=10000,\n",
     "    load_best_model_at_end=True,\n",
     "    metric_for_best_model=\"loss\",\n",
-    "    num_train_epochs=0.5,    \n",
-    "    per_device_train_batch_size=1, \n",
+    "    num_train_epochs=1,    \n",
+    "    per_device_train_batch_size=2, \n",
     "    gradient_accumulation_steps=2,\n",
     "    per_device_eval_batch_size=1)\n",
     "data_collator = DataCollatorForLanguageModeling(tokenizer=tokenizer, mlm=False)\n",
@@ -169,60 +205,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='2762' max='2762' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2762/2762 8:22:03, Epoch 0/1]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "      <th>Accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1000</td>\n",
-       "      <td>1.465300</td>\n",
-       "      <td>1.307370</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2000</td>\n",
-       "      <td>1.191700</td>\n",
-       "      <td>0.988453</td>\n",
-       "      <td>0.000081</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "trainer.train()\n",
-    "trainer.save_model(\"music-gpt2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='6266' max='6266' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [6266/6266 9:49:35, Epoch 0/1]\n",
+       "      <progress value='8314' max='8314' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [8314/8314 34:15:29, Epoch 1/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -245,37 +229,8 @@
     }
    ],
    "source": [
-    "full_train_dataset = load_dataset(\"text\", data_files=\"./datasets/dataset_256.txt\")\n",
-    "tokenized_datasets = full_train_dataset.map(tokenize_function, batched=True)\n",
-    "tokenized_datasets = tokenized_datasets.remove_columns([\"text\"])\n",
-    "tokenized_datasets = tokenized_datasets.shuffle()\n",
-    "tokenized_datasets = tokenized_datasets[\"train\"].train_test_split(test_size=0.0005)\n",
-    "\n",
-    "training_args = TrainingArguments(\"trainer\", \n",
-    "    label_names=[\"input_ids\", \"attention_mask\"],\n",
-    "    evaluation_strategy=\"steps\", \n",
-    "    eval_steps=10000,\n",
-    "    save_steps=10000,\n",
-    "    load_best_model_at_end=True,\n",
-    "    metric_for_best_model=\"loss\",\n",
-    "    num_train_epochs=1,    \n",
-    "    per_device_train_batch_size=2, \n",
-    "    gradient_accumulation_steps=2,\n",
-    "    per_device_eval_batch_size=1)\n",
-    "data_collator = DataCollatorForLanguageModeling(tokenizer=tokenizer, mlm=False)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "trainer = Trainer(\n",
-    "    model,\n",
-    "    training_args,\n",
-    "    train_dataset=tokenized_datasets[\"train\"],\n",
-    "    eval_dataset=tokenized_datasets[\"test\"],\n",
-    "    data_collator=data_collator,\n",
-    "    tokenizer=tokenizer,\n",
-    "    compute_metrics=compute_metrics,\n",
-    ")\n",
-    "\n",
     "trainer.train()\n",
-    "trainer.save_model(\"music-gpt2-2.0\")"
+    "trainer.save_model(\"music-gpt2-2.3\")"
    ]
   },
   {
@@ -455,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4,
   "vscode": {
