--- a/music-gpt2.ipynb
+++ b/music-gpt2.ipynb
@@ -396,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +415,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "24541868be3583ff01c1875e234ea798d47b74c27922f013e28f21b25f34d2af"
    }
   }
  },
